--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" data-theme="dark">
 
 <head>
+    <!-- Last Updated: 2026-02-01 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suchith Kurapati | Software Developer Portfolio</title>
