--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
                                     class="link-value">Suchith Kurapati</span></div><i
                                 class="fas fa-external-link-alt"></i>
                         </a>
-                        <a href="mailto:suchithnetha@gmail.com" class="contact-link">
+                        <a href="mailto:suchithkurapati2005@gmail.com" class="contact-link">
                             <div class="link-icon"><i class="fas fa-envelope"></i></div>
                             <div class="link-content"><span class="link-label">Email</span><span
-                                    class="link-value">suchithnetha@gmail.com</span></div><i
+                                    class="link-value">suchithkurapati2005@gmail.com</span></div><i
                                 class="fas fa-external-link-alt"></i>
                         </a>
                     </div>
@@ -329,7 +329,7 @@
                             <a href="https://www.linkedin.com/in/suchith-kurapati-29151b249" target="_blank"
                                 class="social-link"><i class="fab fa-linkedin"></i></a>
                         </div>
-                        <a href="mailto:suchithnetha@gmail.com" class="btn btn-primary card-btn"><span>Send
+                        <a href="mailto:suchithkurapati2005@gmail.com" class="btn btn-primary card-btn"><span>Send
                                 Message</span><i class="fas fa-paper-plane"></i></a>
                     </div>
                 </div>
@@ -356,7 +356,7 @@
     <div class="fab-container">
         <button class="fab-main" id="fabMain"><i class="fas fa-plus"></i></button>
         <div class="fab-options">
-            <a href="mailto:suchithnetha@gmail.com" class="fab-option" data-tooltip="Email Me"><i
+            <a href="mailto:suchithkurapati2005@gmail.com" class="fab-option" data-tooltip="Email Me"><i
                     class="fas fa-envelope"></i></a>
             <a href="https://www.linkedin.com/in/suchith-kurapati-29151b249" target="_blank" class="fab-option"
                 data-tooltip="LinkedIn"><i class="fab fa-linkedin"></i></a>
