Rebrand: Updated role to AI Developer across the portfolio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suchith Kurapati | Software Developer Portfolio</title>
     <meta name="description"
-        content="Suchith Kurapati - Full Stack Developer specialized in AI/ML, Voice Agents, and Web Development.">
+        content="Suchith Kurapati - AI Developer specialized in Voice Agents, Machine Learning, and Intelligent Systems.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -129,7 +129,7 @@
                             <pre><code><span class="code-keyword">class</span> <span class="code-class">Developer</span>:
     <span class="code-keyword">def</span> <span class="code-function">__init__</span>(self):
         self.name = <span class="code-string">"Suchith Kurapati"</span>
-        self.role = <span class="code-string">"Full Stack Developer"</span>
+        self.role = <span class="code-string">"AI Developer"</span>
         self.interests = [
             <span class="code-string">"AI/ML"</span>,
             <span class="code-string">"Voice Agents"</span>,
@@ -194,7 +194,7 @@
                     <div class="timeline-marker"><i class="fas fa-laptop-code"></i></div>
                     <div class="timeline-content">
                         <span class="timeline-date">2025</span>
-                        <h3 class="timeline-title">Full Stack Developer</h3>
+                        <h3 class="timeline-title">AI/ML Developer</h3>
                         <p class="timeline-subtitle">Web Applications & ML Systems</p>
                         <p class="timeline-description">Built full-stack applications including expense trackers with AI
                             insights, medical diagnosis ML pipelines with ZenML/MLflow, and trading portfolio management
@@ -322,7 +322,7 @@
                         <div class="card-avatar"><img src="https://avatars.githubusercontent.com/u/173757092?v=4"
                                 alt="Suchith Kurapati"></div>
                         <h3 class="card-name">Suchith Kurapati</h3>
-                        <p class="card-role">Full Stack Developer</p>
+                        <p class="card-role">AI Developer</p>
                         <div class="card-socials">
                             <a href="https://github.com/SuchithNetha" target="_blank" class="social-link"><i
                                     class="fab fa-github"></i></a>
