Fix: Ensure SprintSensev1 project displays correctly

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
 
 <head>
-    <!-- Last Updated: 2026-02-01 -->
+    <!-- Last Updated: 2026-02-01-v2 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suchith Kurapati | Software Developer Portfolio</title>
