changes on ai developer rather than full stack made

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Last Updated: 2026-02-01-v2 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suchith Kurapati | Software Developer Portfolio</title>
+    <title>Suchith Kurapati | AI Developer Portfolio</title>
     <meta name="description"
         content="Suchith Kurapati - AI Developer specialized in Voice Agents, Machine Learning, and Intelligent Systems.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -63,8 +63,8 @@
                         Kurapati</span></h1>
                 <div class="hero-subtitle"><span class="subtitle-static">I build</span><span class="subtitle-dynamic"
                         id="typingText"></span><span class="typing-cursor">|</span></div>
-                <p class="hero-description">Full-stack developer passionate about creating intelligent applications that
-                    bridge the gap between cutting-edge AI and intuitive user experiences.</p>
+                <p class="hero-description">AI Developer passionate about architecting intelligent applications that
+                    bridge the gap between cutting-edge Machine Learning and intuitive user experiences.</p>
                 <div class="hero-cta">
                     <a href="#projects" class="btn btn-primary"><span>View My Work</span><i
                             class="fas fa-arrow-right"></i></a>
@@ -116,7 +116,7 @@
                         <div class="highlight-item"><i class="fas fa-microphone-alt"></i><span>Voice AI
                                 Specialist</span></div>
                         <div class="highlight-item"><i class="fas fa-brain"></i><span>ML Enthusiast</span></div>
-                        <div class="highlight-item"><i class="fas fa-code"></i><span>Full-Stack Developer</span></div>
+                        <div class="highlight-item"><i class="fas fa-code"></i><span>AI & ML Specialist</span></div>
                     </div>
                 </div>
                 <div class="about-image">
@@ -196,7 +196,8 @@
                         <span class="timeline-date">2025</span>
                         <h3 class="timeline-title">AI/ML Developer</h3>
                         <p class="timeline-subtitle">Web Applications & ML Systems</p>
-                        <p class="timeline-description">Built full-stack applications including expense trackers with AI
+                        <p class="timeline-description">Built AI-integrated applications including expense trackers with
+                            AI
                             insights, medical diagnosis ML pipelines with ZenML/MLflow, and trading portfolio management
                             tools.</p>
                         <div class="timeline-tags">
