send message bug fixed

--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
                                     class="link-value">Suchith Kurapati</span></div><i
                                 class="fas fa-external-link-alt"></i>
                         </a>
-                        <a href="mailto:suchithkurapati2005@gmail.com" class="contact-link">
+                        <a href="mailto:suchithkurapati2005@gmail.com?subject=Project Collaboration Inquiry&body=Hi Suchith,%0D%0A%0D%0AI'm reaching out after seeing your portfolio. I'd love to discuss..."
+                            class="contact-link">
                             <div class="link-icon"><i class="fas fa-envelope"></i></div>
                             <div class="link-content"><span class="link-label">Email</span><span
                                     class="link-value">suchithkurapati2005@gmail.com</span></div><i
@@ -330,7 +331,8 @@
                             <a href="https://www.linkedin.com/in/suchith-kurapati-29151b249" target="_blank"
                                 class="social-link"><i class="fab fa-linkedin"></i></a>
                         </div>
-                        <a href="mailto:suchithkurapati2005@gmail.com" class="btn btn-primary card-btn"><span>Send
+                        <a href="mailto:suchithkurapati2005@gmail.com?subject=Collaboration Inquiry&body=Hi Suchith,%0D%0A%0D%0AI'm interested in your AI/ML work. Let's connect!"
+                            class="btn btn-primary card-btn"><span>Send
                                 Message</span><i class="fas fa-paper-plane"></i></a>
                     </div>
                 </div>
@@ -357,8 +359,8 @@
     <div class="fab-container">
         <button class="fab-main" id="fabMain"><i class="fas fa-plus"></i></button>
         <div class="fab-options">
-            <a href="mailto:suchithkurapati2005@gmail.com" class="fab-option" data-tooltip="Email Me"><i
-                    class="fas fa-envelope"></i></a>
+            <a href="mailto:suchithkurapati2005@gmail.com?subject=Quick Inquiry&body=Hi Suchith," class="fab-option"
+                data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
             <a href="https://www.linkedin.com/in/suchith-kurapati-29151b249" target="_blank" class="fab-option"
                 data-tooltip="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/SuchithNetha" target="_blank" class="fab-option" data-tooltip="GitHub"><i
