--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <div class="hero-cta">
                     <a href="#projects" class="btn btn-primary"><span>View My Work</span><i
                             class="fas fa-arrow-right"></i></a>
-                    <a href="#contact" class="btn btn-secondary"><span>Get in Touch</span></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=suchithkurapati2005@gmail.com&su=Collaboration Inquiry&body=Hi Suchith,%0D%0A%0D%0AI'm reaching out after seeing your portfolio. I'd love to discuss..."
+                        target="_blank" class="btn btn-secondary"><span>Email Me</span></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat"><span class="stat-number" data-count="7">0</span><span
@@ -309,8 +310,8 @@
                                     class="link-value">Suchith Kurapati</span></div><i
                                 class="fas fa-external-link-alt"></i>
                         </a>
-                        <a href="mailto:suchithkurapati2005@gmail.com?subject=Project Collaboration Inquiry&body=Hi Suchith,%0D%0A%0D%0AI'm reaching out after seeing your portfolio. I'd love to discuss..."
-                            class="contact-link">
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=suchithkurapati2005@gmail.com&su=Project Collaboration Inquiry&body=Hi Suchith,%0D%0A%0D%0AI'm reaching out after seeing your portfolio. I'd love to discuss..."
+                            target="_blank" class="contact-link">
                             <div class="link-icon"><i class="fas fa-envelope"></i></div>
                             <div class="link-content"><span class="link-label">Email</span><span
                                     class="link-value">suchithkurapati2005@gmail.com</span></div><i
@@ -331,8 +332,8 @@
                             <a href="https://www.linkedin.com/in/suchith-kurapati-29151b249" target="_blank"
                                 class="social-link"><i class="fab fa-linkedin"></i></a>
                         </div>
-                        <a href="mailto:suchithkurapati2005@gmail.com?subject=Collaboration Inquiry&body=Hi Suchith,%0D%0A%0D%0AI'm interested in your AI/ML work. Let's connect!"
-                            class="btn btn-primary card-btn"><span>Send
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=suchithkurapati2005@gmail.com&su=Collaboration Inquiry&body=Hi Suchith,%0D%0A%0D%0AI'm interested in your AI/ML work. Let's connect!"
+                            target="_blank" class="btn btn-primary card-btn"><span>Send
                                 Message</span><i class="fas fa-paper-plane"></i></a>
                     </div>
                 </div>
@@ -359,8 +360,8 @@
     <div class="fab-container">
         <button class="fab-main" id="fabMain"><i class="fas fa-plus"></i></button>
         <div class="fab-options">
-            <a href="mailto:suchithkurapati2005@gmail.com?subject=Quick Inquiry&body=Hi Suchith," class="fab-option"
-                data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=suchithkurapati2005@gmail.com&su=Collaboration Inquiry&body=Hi Suchith,%0D%0A%0D%0AI'm reaching out after seeing your portfolio. I'd love to discuss..."
+                target="_blank" class="fab-option" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
             <a href="https://www.linkedin.com/in/suchith-kurapati-29151b249" target="_blank" class="fab-option"
                 data-tooltip="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/SuchithNetha" target="_blank" class="fab-option" data-tooltip="GitHub"><i
